Don't check for double click if it was a right mouse click.

Fixes #8714.